--- a/WebStore/templates/base.html
+++ b/WebStore/templates/base.html
@@ -11,7 +11,7 @@
 
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css" integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf" crossorigin="anonymous">
-    <link rel="stylesheet" href="{% static 'content/site.css' %}" />
+    <link rel="stylesheet" href="{% static 'css/site.css' %}" />
 
     <title>WebStore - {{ title }}</title>
 </head>
@@ -29,7 +29,7 @@
             </div>
             <div class="ml-auto mr-4 order-3 order-md-4">
                 {% if user.is_authenticated %}
-                    <a href="{% url 'account' %}" class="fa fa-lg fa-user nav-link"></a>
+                    <a href="{% url 'account:home' %}" class="fa fa-lg fa-user nav-link"></a>
                 {% else %}
                     <a href="{% url 'account:login' %}" class="fa fa-lg fa-user nav-link"></a>
                 {% endif %}
@@ -41,8 +41,19 @@
                     </div>
                 </a>
             </div>
+            {% if user.is_authenticated %}
+            <div class="order-5 order-md-6">
+                <a class="nav-link" href="{% url 'account:logout' %}">
+                    <div class="row">
+                        <i class="fa fa-lg fa-power-off col-6"></i>
+                    </div>
+                </a>
+            </div>
+            {% endif %}
         </div>
     </nav>
-    {% block content %}{% endblock %}
+    <div class="container-fluid">
+        {% block content %}{% endblock %}
+    </div>
 </body>
 </html>
