--- a/WebStore/templates/admin.html
+++ b/WebStore/templates/admin.html
@@ -32,6 +32,7 @@
                     <a class="nav-link" href="{% url 'store_admin:users' %}">Użytkownicy</a>
                     <a class="nav-link" href="{% url 'store_admin:categories' %}">Kategorie</a>
                     <a class="nav-link" href="{% url 'store_admin:products' %}">Produkty</a>
+                    <a class="nav-link" href="{% url 'store_admin:orders' %}">Zamowienia</a>
                 </nav>
             </div>
             <div class="col-md-9">
