--- a/WebStore/profile/templates/profile/menu.html
+++ b/WebStore/profile/templates/profile/menu.html
@@ -12,6 +12,9 @@
         <li class="nav-item">
             <a class="nav-link" href="{% url 'profile:shipments' %}">Adresy dostawy</a>
         </li>
+        <li class="nav-item">
+            <a class="nav-link" href="{% url 'profile:myorders' %}">Moje zamowienia</a>
+        </li>
     </ul>
     {% if request.user.groups.all or request.user.is_superuser %}
         <h4>
