--- a/WebStore/store/templates/store/home.html
+++ b/WebStore/store/templates/store/home.html
@@ -2,6 +2,24 @@
 
 {% block content %}
 
-ssssd
+<div class="mt-3">
+    <div class="text-center">
+        <span class="h2">{{ title }}</span>
+    </div>
+
+    <div class="d-flex flex-column flex-md-row align-content-start flex-wrap">
+        {% for p in products %}
+            <div class="col-md-4 col-xl-3 p-2 category">
+                <a class="nav-link" href="{% url 'store:product' p.id %}">
+                    <div class="text-center bg-light">
+                        <div class="p-3 text-dark">
+                            <h5>{{ p.name }}</h5>
+                        </div>
+                    </div>
+                </a>
+            </div>
+        {% endfor %}
+    </div>
+</div>
 
 {% endblock %}
